<resources>
    <!-- Bahasa Indonesia -->
    <string name="app_name">Farmora</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gambar_produk">Gambar Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="jenis_produk">Jenis Produk</string>
    <string name="tipe_produk">Tipe Produk</string>
    <string name="deskripsi">Deskripsi Produk</string>
    <string name="tersedia">Stok Tersedia :</string>
    <string name="jumlah_tersedia">Jumlah Tersedia</string>
    <string name="kg">(/kg)</string>
    <string name="harga">Harga :</string>
    <string name="harga_barang">50.000</string>
    <string name="_50kg">50Kg</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="nilai_pengguna">9,0</string>
    <string name="txt_nilai">Nilai:</string>
    <string name="pemesanan">Pemesanan:</string>
    <string name="Banyak_pemesanan">Pemesanan</string>
    <string name="buy">Beli Barang</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="image">Gambar</string>
    <string name="ubah_produk">Ubah Produk</string>
    <string name="ulasan">Ulasan :</string>
    <string name="txt_ulasan">500</string>
    <string name="baca_ulasan">Baca Ulasan</string>
    <string name="pengguna">Pengguna</string>
    <string name="isi_pesan">Isi Pesan ...</string>
    <string name="icon_profil">Icon Profil</string>
    <string name="status_order">Status Order :</string>
    <string name="Tanggal">Tanggal :</string>
    <string name="Nomor">Nomor Orderan :</string>
    <string name="no_orderan">No Order Tersedia</string>
    <string name="statusorder">Selesai</string>
    <string name="tanggal_order">Tanggal Order Tersedia</string>
    <string name="waktu">Waktu Order Tersedia</string>
    <string name="waktu_order">Waktu :</string>
    <string name="tambah_produk_baru">Tambah Produk</string>
    <string name="pesan_kepada_penjual">Pesan Kepada Penjual :</string>
    <string name="pembeli">Pembeli</string>
    <string name="proses_pesanan">Proses Pesanan</string>
    <string name="batalkan_proses_pesanan">Batalkan Proses Pesanan</string>
    <string name="menawarkan_harga">Menawarkan Harga :</string>
    <string name="harga_tawaran">Rp. 200.000</string>
    <string name="tolak_tawaran_harga">Tolak Tawaran Harga</string>
    <string name="metode_pembayaran">Metode Pembayaran :</string>
    <string name="Bahasa">Bahasa</string>
    <string name="no_handphone">No Handphone</string>
    <string name="tema">Tema</string>
    <string name="allorder">Semua Pesanan</string>
    <string name="Kondisi_Produk">Kondisi Produk</string>
    <string name="Simpan">Simpan Produk</string>
    <string name="login">Masuk</string>
    <string name="email">Email Pengguna</string>
    <string name="Settings">Settings</string>
    <string name="product_image">Gambar Produk</string>
    <string name="delete_image">Hapus Gambar</string>
    <string name="like_product">Sukai Produk</string>
    <string name="hapus_pesanan">Hapus Pesanan</string>
    <string name="default_web_client_id">6880140007-mu0egqnqji17q6fter60t6reacga5hni.apps.googleusercontent.com</string>
    <string name="tv_message">Lorem ipsum blmabalbablablablalwn awkndawnd awajdjaw\n</string>
    <string name="language_settings">Pilih Bahasa</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="english">English</string>
    <string name="myaccount">Akun Saya</string>
    <string name="mulai_berbisnis">Mulai Berbisnis</string>
    <string name="daftarAkunbisnis">Daftar Akun Bisnis</string>
    <string name="produklist">Produk Yang Tersedia</string>
    <string name="produkrekomendasi">Rekomendasi Produk</string>
    <string name="appkatalog">Ingin Belanja Apa Hari Ini?</string>
    <string name="search">Mencari</string>
    <string name="allproduct">Semua</string>
    <string name="padi">Padi</string>
    <string name="kacangan">Kacang-Kacangan</string>
    <string name="umbi">Umbi-Umbian</string>
    <string name="sayur">Sayur Daun</string>
    <string name="buah">Buah</string>
    <string name="obat">Tanaman Obat</string>
    <string name="memesan">Memesan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="selesai">Selesai</string>
    <string name="stok">Stok :</string>
    <string name="bayarditempat">Bayar Ditempat</string>
    <string name="Batalkanpesanan">Batalkan Pesanan</string>
    <string name="konfpesanan">Proses pesanan</string>
    <string name="pesandaripenjual">Pesan Dari Penjual</string>
    <string name="buatakun">Buat Akun</string>
    <string name="daftar">Daftar</string>
    <string name="kelogin">Sudah Terdaftar, Masuk!</string>
    <string name="txtsimpanproduk">Tampilkan Produk Keranjang</string>
    <string name="ketikpesan">Ketik Pesan</string>
    <string name="terimapesanan">Terima Pesanan</string>
    <string name="tvproduksaya">Produk Saya</string>
    <string name="tv_daftarbisnis">Daftar Akun Bisnis</string>
    <string name="Settingakun">Setting Akun</string>
    <string name="batal">Batal</string>
    <string name="proses">Proses</string>
    <string name="alamat">Alamat Penjual : </string>
    <string name="utama">Utama</string>
    <string name="pesan">Pesan</string>
    <string name="keranjang">Keranjang</string>
    <string name="akun">Akun</string>
    <string name="rempah">Rempah-Rempah</string>
    <string name="hias">Tanaman Hias</string>
    <string name="Editbisnis">Edit Profil Bisnis</string>
</resources>
