<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.Penjual.TerimaPesananActivity">

    <!-- ScrollView konten utama -->
    <ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingBottom="160dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/llmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- User Info -->
            <LinearLayout
                android:id="@+id/item_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_grey"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_user_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:clipToOutline="true"
                    android:src="@drawable/avatar"
                    android:shape="oval" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nama_pengguna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_pengguna"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_7"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kirim_pesan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/kirim_pesan"
                android:textColor="@color/black"
                app:cornerRadius="16dp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

            <!-- Order Number -->
            <RelativeLayout
                android:id="@+id/orderan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nomor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nomor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/orderNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/nomor"
                    android:text="@string/no_orderan" />
            </RelativeLayout>

            <!-- Status Order -->
            <RelativeLayout
                android:id="@+id/rv_statusorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_order"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/status"
                    android:text="@string/statusorder" />
            </RelativeLayout>

            <!-- Date & Time -->
            <RelativeLayout
                android:id="@+id/rv_tanggal_waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tanggal"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tanggal_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/tanggal"
                    android:text="@string/tanggal_order" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/waktu_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@id/tanggal_order"
                    android:text="@string/waktu_order" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/order_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/waktu_order"
                    android:text="@string/waktu" />
            </RelativeLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <!-- RecyclerView Produk Keranjang -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_produk_keranjang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:listitem="@layout/item_keranjang_produk" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <!-- Metode Pembayaran -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/metode_pembayaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metode_pembayaran"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group_metode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_ambil_ditempat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="12dp"
                        android:text="@string/bayarditempat"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_5"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <!-- Change the label to "Pesan dari Penjual" -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pesan_dari_penjual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pesandaripenjual"
                    android:textStyle="bold" />

                <!-- Change TextInputEditText to TextView since the message will be displayed from Firestore -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/edittext_pesan_dari_penjual"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/border_backround"
                    android:text="Pesan akan muncul di sini"
                    android:gravity="top"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/darker_gray"
        android:padding="16dp"
        android:layout_gravity="bottom"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Item: 2"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginEnd="4dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_barang"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/konfpesanan"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tolak_tawaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tolak_tawaran_harga"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
