<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    android:layout_margin="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/icon_profil"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/account_circle"
            android:contentDescription="@string/icon_profil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_container"
            android:layout_marginEnd="8dp"/>

        <!-- Text Container for Sender Name, Message and Timestamp -->
        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/icon_profil"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Sender Name -->
            <TextView
                android:id="@+id/pengguna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengguna"
                android:textStyle="bold"
                android:textSize="16sp"
                android:ellipsize="end"
                android:maxLines="1"/>

            <!-- Message Content -->
            <TextView
                android:id="@+id/isi_pesan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isi_pesan"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="4dp"/>

            <!-- Timestamp -->
            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12:00"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
